add slider information on home page. add some changex in styles, fonts, pages

--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
 								<li><a class="fa fa-facebook" href="#"></a></li>
 								<li><a class="fa fa-twitter" href="#"></a></li>
 								<li><a class="fa fa-youtube" href="#"></a></li>
-								<li><a class="fa fa-pinterest-p" href="#"></a></li>
+								<li><a class="fa fa-pinterest" href="#"></a></li>
 								<li><a class="fa fa-instagram" href="#"></a></li>
 								<li class="language">
 									<span class="arrow-select">
@@ -116,7 +116,7 @@
 				        					<ul class="cart-product-social">
 				        						<li><a class="fa fa-facebook" href="#"></a></li>
 												<li><a class="fa fa-twitter" href="#"></a></li>
-												<li><a class="fa fa-pinterest-p" href="#"></a></li>
+												<li><a class="fa fa-pinterest" href="#"></a></li>
 				        					</ul>
 				        				</li>
 				        				<li class="cart-product-price">
@@ -142,7 +142,7 @@
 				        					<ul class="cart-product-social">
 				        						<li><a class="fa fa-facebook" href="#"></a></li>
 												<li><a class="fa fa-twitter" href="#"></a></li>
-												<li><a class="fa fa-pinterest-p" href="#"></a></li>
+												<li><a class="fa fa-pinterest" href="#"></a></li>
 				        					</ul>
 				        				</li>
 				        				<li class="cart-product-price">
@@ -203,7 +203,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -217,7 +217,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -230,7 +230,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -252,7 +252,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Oq scallop solid</p>
@@ -265,7 +265,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_12.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Stripe 19 qs</p>
@@ -278,7 +278,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Yoke 19 qs</p>
@@ -291,7 +291,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -316,7 +316,7 @@
 				<ul>
 					<li><a class="fa fa-facebook" href="#"></a></li>
 					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
+					<li><a class="fa fa-pinterest" href="#"></a></li>
 				</ul>
 			</div>
 			<div class="info-footer">
@@ -387,7 +387,7 @@
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
-						<li><a class="fa fa-pinterest-p" href="#"></a></li>
+						<li><a class="fa fa-pinterest" href="#"></a></li>
 						<li><a class="fa fa-google-plus" href="#"></a></li>
 						<li><a class="fa fa-tumblr" href="#"></a></li>
 						<li><a class="fa fa-instagram" href="#"></a></li>
