--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 								<li><a class="fa fa-facebook" href="#"></a></li>
 								<li><a class="fa fa-twitter" href="#"></a></li>
 								<li><a class="fa fa-youtube" href="#"></a></li>
-								<li><a class="fa fa-pinterest-p" href="#"></a></li>
+								<li><a class="fa fa-pinterest" href="#"></a></li>
 								<li><a class="fa fa-instagram" href="#"></a></li>
 								<li class="language">
 									<span class="arrow-select">
@@ -35,37 +35,58 @@
 							</ul>
 						</div>
 					</div>
-					<div class="log-in">
-						<div class="cart-search">
-							<ul class="login-wish clearfix">
-								<li class="f-left"><a href="#">log in</a></li>
-	                            <li class="f-right"><a href="#">wish list(<span>o</span>)</a></li>
-	                        </ul>
-		                    <div class="cart clearfix">
-		                        <a class="cart-icon" href="#"></a>
-			                    <span class="cart-price">
-			                      	<span class="final-price">$1,459.50</span> 
-			                      	<a href="#">2 items</a>
-			                	</span>
-		                        <ul class="cart-edit f-right">
-		                            <li class="close"><a href="#"></a></li>
-		                            <li><a href="#">edit</a></li>
+					<div class="header-bottom">
+						<div class="log-in">
+							<div class="cart-search">
+								<ul class="login-wish clearfix">
+									<li class="f-left"><a href="#">log in</a></li>
+		                            <li class="f-right"><a href="#">wish list(<span>o</span>)</a></li>
 		                        </ul>
+			                    <div class="cart clearfix">
+			                        <a class="cart-icon" href="#"></a>
+				                    <span class="cart-price">
+				                      	<span class="final-price">$1,459.50</span> 
+				                      	<a href="#">2 items</a>
+				                	</span>
+			                        <ul class="cart-edit f-right">
+			                            <li class="close"><a href="#"></a></li>
+			                            <li><a href="#">edit</a></li>
+			                        </ul>
+			                    </div>
+			                    <ul class="view-check">
+				                    <li><a href="#">view cart</a></li>
+				                    <li><a href="#">checkout</a></li>
+				                </ul>
 		                    </div>
-		                    <ul class="view-check">
-			                    <li><a href="#">view cart</a></li>
-			                    <li><a href="#">checkout</a></li>
-			                </ul>
-	                    </div>
-	                    <div class="search">
-	                        <input type="text" value="Search" />
-	                        <input class="f-right" type="submit" value="" />
-	                    </div>
-					</div>
-	                <div class="yellow-banner">
-	                    <h2>welcome to surfhouse</h2>
-	                    <p>The only online store you will ever need for all your windsurfing and kitesurfing and SUP needs</p>
-	                </div>
+		                    <div class="search">
+		                        <input type="text" value="Search" />
+		                        <input class="f-right" type="submit" value="" />
+		                    </div>
+						</div>
+		                <div class="yellow-banner">
+		                    <h2>welcome to surfhouse</h2>
+		                    <p>The only online store you will ever need for all your windsurfing and kitesurfing and SUP needs</p>
+		                </div>
+	                    <div class="slider-header-content">
+	                        <div class="slider-content">
+	                            <h1>JP Funride 2014</h1>
+	                            <p>Super easy going freeride boards based on the X-Cite Ride shape concept with additional control and super easy jibing.</p>
+                                <button class="slider-content-button">Buy now</button>
+                            </div>
+                            <div class="slider-header-arrows">
+	                            <a href="#" class="header-prev-arrow"></a>
+	                            <a href="#" class="header-next-arrow active"></a>
+	                        </div>
+                        </div>
+                        <form class="slider-header-control">
+		                    <label for="radio1"></label>
+		                    <input id="radio1" type="radio" name="header-control" checked />
+		                    <label for="radio2"></label>
+		                    <input id="radio2" type="radio" name="header-control" />
+		                    <label for="radio3"></label>
+		                    <input id="radio3" type="radio" name="header-control" />
+		                </form>
+                    </div>
 				</div>
 			</header>
 			<main class="content negative-position">
@@ -125,7 +146,7 @@
 								<li><a href="#">Canon PowerShot S100</a></li>
 								<li><a href="#">Apple iMac</a></li>
 							</ul>
-							<a class="link-arrow" href="#">view all tags</a>
+							<a class="link-arrow" href="#">view all</a>
 						</div>
 					</aside>
 					<section class="right-column content-column">
@@ -154,7 +175,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -168,7 +189,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -181,7 +202,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Synergy 2mm back zip</p>
@@ -207,7 +228,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_12.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Surf yoke 19 qs</p>
@@ -245,7 +266,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -259,7 +280,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -296,7 +317,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -310,7 +331,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -353,7 +374,7 @@
 				<ul>
 					<li><a class="fa fa-facebook" href="#"></a></li>
 					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
+					<li><a class="fa fa-pinterest" href="#"></a></li>
 				</ul>
 			</div>
 			<div class="info-footer">
@@ -424,7 +445,7 @@
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
-						<li><a class="fa fa-pinterest-p" href="#"></a></li>
+						<li><a class="fa fa-pinterest" href="#"></a></li>
 						<li><a class="fa fa-google-plus" href="#"></a></li>
 						<li><a class="fa fa-tumblr" href="#"></a></li>
 						<li><a class="fa fa-instagram" href="#"></a></li>
