--- a/shop-cat-gridx3.html
+++ b/shop-cat-gridx3.html
@@ -22,7 +22,7 @@
 								<li><a class="fa fa-facebook" href="#"></a></li>
 								<li><a class="fa fa-twitter" href="#"></a></li>
 								<li><a class="fa fa-youtube" href="#"></a></li>
-								<li><a class="fa fa-pinterest-p" href="#"></a></li>
+								<li><a class="fa fa-pinterest" href="#"></a></li>
 								<li><a class="fa fa-instagram" href="#"></a></li>
 								<li class="language">
 									<span class="arrow-select">
@@ -195,7 +195,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Salty dayz</p>
@@ -209,7 +209,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Cheeky jane</p>
@@ -222,7 +222,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Synergy 2mm back zip</p>
@@ -248,7 +248,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/cart_12.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Surf yoke 19 qs</p>
@@ -262,7 +262,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
@@ -275,7 +275,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/cart_12.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
@@ -288,7 +288,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
@@ -301,7 +301,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
@@ -314,7 +314,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
@@ -328,7 +328,7 @@
 						<figure class="shop-item mark">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
@@ -342,7 +342,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
@@ -356,7 +356,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
@@ -369,7 +369,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+									<img src="img/" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
@@ -425,7 +425,7 @@
 				<ul>
 					<li><a class="fa fa-facebook" href="#"></a></li>
 					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
+					<li><a class="fa fa-pinterest" href="#"></a></li>
 				</ul>
 			</div>
 			<div class="info-footer">
@@ -496,7 +496,7 @@
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
-						<li><a class="fa fa-pinterest-p" href="#"></a></li>
+						<li><a class="fa fa-pinterest" href="#"></a></li>
 						<li><a class="fa fa-google-plus" href="#"></a></li>
 						<li><a class="fa fa-tumblr" href="#"></a></li>
 						<li><a class="fa fa-instagram" href="#"></a></li>
