--- a/productpage.html
+++ b/productpage.html
@@ -22,7 +22,7 @@
 								<li><a class="fa fa-facebook" href="#"></a></li>
 								<li><a class="fa fa-twitter" href="#"></a></li>
 								<li><a class="fa fa-youtube" href="#"></a></li>
-								<li><a class="fa fa-pinterest-p" href="#"></a></li>
+								<li><a class="fa fa-pinterest" href="#"></a></li>
 								<li><a class="fa fa-instagram" href="#"></a></li>
 								<li class="language">
 									<span class="arrow-select">
@@ -212,69 +212,58 @@
 				        	<div class="line"></div>
 				        	<div class="product-size-length">
 				        		<h2>Size</h2>
-				        		<ul>
-				        			<li>
-				        				<label for="size-25" class="product-radio">
-                                         	<input id="size-25" name="size" type="radio" value="25" />25
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-26" class="product-radio">
-                                         	<input id="size-26" name="size" type="radio" value="26" checked />26
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-27" class="product-radio">
-                                         	<input id="size-27" name="size" type="radio" value="27" />27
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-28" class="product-radio">
-                                         	<input id="size-28" name="size" type="radio" value="28" />28
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-29" class="product-radio">
-                                         	<input id="size-29" name="size" type="radio" value="29" />29
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-30" class="product-radio">
-                                         	<input id="size-30" name="size" type="radio" value="30" />30
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-31" class="product-radio">
-                                         	<input id="size-31" name="size" type="radio" value="31" />31
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-32" class="product-radio">
-                                         	<input id="size-32" name="size" type="radio" value="32" />32
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="size-33" class="product-radio">
-                                         	<input id="size-33" name="size" type="radio" value="33" />33
-                                     	</label>
-				        			</li>
-				        		</ul>
+				        		<form>
+				        			<label for="size-25" class="product-radio">
+                                       	<input id="size-25" name="size" type="radio" value="25" />
+                                       	<span>25</span>
+                                    </label>
+				        			<label for="size-26" class="product-radio">
+                                       	<input id="size-26" name="size" type="radio" value="26" checked />
+                                       	<span>26</span>
+                                    </label>
+				        			<label for="size-27" class="product-radio">
+                                       	<input id="size-27" name="size" type="radio" value="27" />
+                                       	<span>27</span>
+                                    </label>
+				        			<label for="size-28" class="product-radio">
+                                       	<input id="size-28" name="size" type="radio" value="28" />
+                                       	<span>28</span>
+                                    </label>
+				        			<label for="size-29" class="product-radio">
+                                       	<input id="size-29" name="size" type="radio" value="29" />
+                                       	<span>29</span>
+                                    </label>
+				        			<label for="size-30" class="product-radio">
+                                       	<input id="size-30" name="size" type="radio" value="30" />
+                                       	<span>30</span>
+                                    </label>
+				        			<label for="size-31" class="product-radio">
+                                       	<input id="size-31" name="size" type="radio" value="31" />
+                                       	<span>31</span>
+                                    </label>
+				        			<label for="size-32" class="product-radio">
+                                       	<input id="size-32" name="size" type="radio" value="32" />
+                                       	<span>32</span>
+                                    </label>
+				        			<label for="size-33" class="product-radio">
+                                       	<input id="size-33" name="size" type="radio" value="33" />
+                                       	<span>33</span>
+                                    </label>
+				        		</form>
 				        	</div>
 				        	<div class="line"></div>
 				        	<div class="product-size-length">
 				        		<h2>Length</h2>
-				        		<ul>
-				        			<li>
-				        				<label for="length-32" class="product-radio">
-                                         	<input id="length-32" name="length" type="radio" value="32" />32
-                                     	</label>
-				        			</li>
-				        			<li>
-				        				<label for="length-34" class="product-radio">
-                                         	<input id="length-34" name="length" type="radio" value="34" />34
-                                     	</label>
-				        			</li>
-				        		</ul>
+				        		<form>
+				        			<label for="length-32" class="product-radio">
+                                        <input id="length-32" name="length" type="radio" value="32" />
+                                        <span>32</span>
+                                   	</label>
+				        			<label for="length-34" class="product-radio">
+                                      	<input id="length-34" name="length" type="radio" value="34" />
+                                      	<span>34</span>
+                                   	</label>
+				        		</form>
 				        	</div>
 				        	<div class="line"></div>
 				        	<div class="product-add clearfix">
@@ -343,7 +332,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -357,7 +346,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -370,7 +359,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -392,7 +381,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Oq scallop solid</p>
@@ -405,7 +394,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_12.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Stripe 19 qs</p>
@@ -418,7 +407,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Yoke 19 qs</p>
@@ -431,7 +420,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
+											<img src="img/" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -456,7 +445,7 @@
 				<ul>
 					<li><a class="fa fa-facebook" href="#"></a></li>
 					<li><a class="fa fa-twitter" href="#"></a></li>
-					<li><a class="fa fa-pinterest-p" href="#"></a></li>
+					<li><a class="fa fa-pinterest" href="#"></a></li>
 				</ul>
 			</div>
 			<div class="info-footer">
@@ -527,7 +516,7 @@
 					<ul class="footer-social f-right">
 						<li><a class="fa fa-facebook" href="#"></a></li>
 						<li><a class="fa fa-twitter" href="#"></a></li>
-						<li><a class="fa fa-pinterest-p" href="#"></a></li>
+						<li><a class="fa fa-pinterest" href="#"></a></li>
 						<li><a class="fa fa-google-plus" href="#"></a></li>
 						<li><a class="fa fa-tumblr" href="#"></a></li>
 						<li><a class="fa fa-instagram" href="#"></a></li>
