add slider information on home page. add some changex in styles, fonts, pages

--- a/cart.html
+++ b/cart.html
@@ -108,7 +108,7 @@
 				        		<div class="cart-panel-body">
 				        			<ul class="cart-product">
 				        				<li class="cart-product-img">
-				        					<img src="" alt="some image">
+				        					<img src="img/" alt="some image" />
 				        				</li>
 				        				<li class="cart-product-description">
 				        					<a class="cart-product-name" href="#">OG SCALLOP SOLID</a>
@@ -129,7 +129,7 @@
 				        				</li>
 				        				<li class="cart-product-subtotal">
 				        					<p class="shop-price">749.50</p>
-				        					<button class="cart-product-close" href="#"></button>
+				        					<button class="cart-product-close"></button>
 				        				</li>
 				        			</ul>
 				        			<ul class="cart-product">
@@ -155,7 +155,7 @@
 				        				</li>
 				        				<li class="cart-product-subtotal">
 				        					<p class="shop-price">749.50</p>
-				        					<button class="cart-product-close" href="#"></button>
+				        					<button class="cart-product-close"></button>
 				        				</li>
 				        			</ul>
 				        		</div>
